force-app/main/default/objects/Vendor_Compliance_for_Account__c/Vendor_Compliance_for_Account__c.object-meta.xml
<CustomObject>
    <description>Junction object used to affiliate a single Vendor Compliance record with multiple, related Accounts for a Customer.</description>
    <label>Vendor Compliance for Account</label>
    <nameField>
        <displayFormat>VCA-{0000000}</displayFormat>
        <label>VCA ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Compliance for Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>