force-app/main/default/objects/Vendor_Compliance_for_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Compliance for Account</relationshipLabel>
    <relationshipName>Vendor_Compliance_for_Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>