force-app/main/default/objects/Vendor_Compliance_for_Account__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>Text(Customer_Vendor_Compliance_Record__r.Brand__c)</formula>
    <label>Brand</label>
    <type>Text</type>
</CustomField>