force-app/main/default/objects/Vendor_Compliance_for_Account__c/fields/Customer_Vendor_Compliance_Record__c.field-meta.xml
<CustomField>
    <fullName>Customer_Vendor_Compliance_Record__c</fullName>
    <label>Customer Vendor Compliance Record</label>
    <referenceTo>Vendor_Compliance__c</referenceTo>
    <relationshipLabel>Accounts with Vendor Compliance</relationshipLabel>
    <relationshipName>Vendor_Compliance_for_Account</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>